# garudan-server

./: README.md  pyproject.toml
garudan-server/: README.md
garudan-server/garudan_server/: cli.py  config.py  main.py
garudan-server/garudan_server/routes/: auth.py  docker_routes.py
garudan_server/: __init__.py
garudan_server/routes/: files.py  system.py  terminal.py
